<resources>
    <string name="app_name">Zero-touch reseller tool</string>
    <string name="no_devices">No devices found</string>
    <string name="refreshbutton">Refresh</string>
    <string name="customer_label">Customers:</string>
    <string name="device_label">Devices:</string>
    <string name="preference_file_key">com.google.ztresellertool</string>
    <string name="service_account_pref_key">service_account</string>
    <string name="customer_list_refreshed">Customer list updated</string>
    <string name="service_app_name">Zero-touch Reseller Tool</string>
    <string name="error_message">An error occurred</string>
    <string name="service_account_title">Service account</string>
    <string name="service_account_description">A JSON stream, usually the contents of a service account credential extracted from the Google Cloud console</string>
    <string name="reseller_id_title">Reseller account ID</string>
    <string name="reseller_id_description">The ID of the reseller account</string>
    <string name="username_title">Username</string>
    <string name="username_description">The name of the user, for entries in the audit log</string>
    <string name="reseller_id_pref_key">reseller_id</string>
    <string name="reseller_id_label">Reseller ID:</string>
    <string name="add_button_label">+</string>
    <string name="manufacturer_label">Manufacturer</string>
    <string name="device_type_label">Device type</string>
    <string name="cellular_label">Cellular</string>
    <string name="wi_fi_label">Wi-Fi</string>
    <string name="modem_id_label">Modem ID</string>
    <string name="modem_type_label">Modem type</string>
    <string name="imei_label">IMEI</string>
    <string name="meid_label">MEID</string>
    <string name="model_label">Model</string>
    <string name="serial_number_label">Serial number</string>
    <string name="submit_label">Submit</string>
    <string name="device_added_success">Device registered successfully</string>
    <string name="invalid_IMEI">Invalid IMEI</string>
    <string name="invalid_MEID">MEID must be 14 digits</string>
    <string name="error_invalid_manufacturer">Invalid manufacturer</string>
    <string name="error_communication">Communication error. Try again</string>
    <string name="error_reclaim">Device already registered with a different manufacturer value</string>
    <string name="error_another_customer">Device already registered to another customer</string>
    <string name="error_bad_model">Invalid model</string>
    <string name="delete_label">Delete</string>
    <string name="devices_deleted">Deleted successfully</string>
    <string name="devices_deleted_error">Errors encountered - some devices may not be deleted</string>
    <string name="customer_name_label">Customer name</string>
    <string name="owner_email_label">Owner email</string>
    <string name="additional_admin_emails_label">Additional admin emails</string>
    <string name="create_button_label">Create</string>
    <string name="customer_added_success">Customer added</string>
    <string name="add_customer_label">+</string>
    <string name="error_not_google_account">One of the emails is not a Google account</string>
    <string name="error_admin_email_invalid">One of the admin emails is invalid</string>
    <string name="submit_button_label">Submit</string>
    <string name="configured_by_admin">Configured by IT admin</string>
    <string name="invalid_IMEI_length">IMEI must be 15 digits</string>
    <string name="managed_configuration_updated">Settings updated by IT admin. Resetting.</string>
    <string name="firestore_applicationid_title">Firestore application ID</string>
    <string name="firestore_applicationid_description">Application ID for connecting to Firestore database for audit logging</string>
    <string name="firestore_apikey_title">Firestore API key</string>
    <string name="firestore_apikey_description">API key for connecting to Firestore database for audit logging</string>
    <string name="firestore_databaseurl_title">Firestore database URL</string>
    <string name="firestore_databaseurl_description">Database URL for connecting to Firestore database for audit logging</string>
    <string name="firestore_storagebucket_title">Firestore storage bucket</string>
    <string name="firestore_storagebucket_description">Storage bucket for connecting to Firestore database for audit logging</string>
    <string name="firestore_projectid_title">Firestore project ID</string>
    <string name="firestore_projectid_description">Project ID for connecting to Firestore database for audit logging</string>
</resources>