<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addDeviceLand">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/modem_id"
                android:layout_width="0dp"
                android:layout_height="38dp"
                app:layout_constraintBottom_toBottomOf="@+id/modem_type"
                app:layout_constraintEnd_toEndOf="@+id/manufacturer"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toStartOf="@+id/manufacturer" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="2dp"
                android:text="@string/manufacturer_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/manufacturer"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/manufacturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toStartOf="@+id/device_type"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/device_type_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/device_type"
                app:layout_constraintStart_toStartOf="@+id/device_type"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/device_type"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textOff="@string/cellular_label"
                android:textOn="@string/wi_fi_label"
                android:onClick="switch_device_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/modem_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modem_id_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/modem_id"
                app:layout_constraintStart_toStartOf="@+id/textView6" />

            <TextView
                android:id="@+id/modem_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modem_type_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/modem_type"
                app:layout_constraintEnd_toEndOf="@+id/modem_type"
                app:layout_constraintStart_toStartOf="@+id/modem_type" />

            <ToggleButton
                android:id="@+id/modem_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textOff="@string/imei_label"
                android:textOn="@string/meid_label"
                app:layout_constraintEnd_toEndOf="@+id/device_type"
                app:layout_constraintStart_toStartOf="@+id/device_type"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/model_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:enabled="false"
                android:text="@string/model_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/model"
                app:layout_constraintStart_toStartOf="@+id/modem_id_label" />

            <EditText
                android:id="@+id/model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/modem_id"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <TextView
                android:id="@+id/serial_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:enabled="false"
                android:text="@string/serial_number_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/serial_number"
                app:layout_constraintStart_toStartOf="@+id/model_label" />

            <EditText
                android:id="@+id/serial_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/model"
                app:layout_constraintTop_toBottomOf="@+id/model" />

            <View
                android:id="@+id/divider3"
                android:layout_width="729dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/device_type" />

            <View
                android:id="@+id/divider4"
                android:layout_width="729dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modem_id" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/submit_button_label"
                android:onClick="submit_device"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serial_number_label"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="scan_modem_id"
                app:layout_constraintEnd_toEndOf="@+id/manufacturer"
                app:layout_constraintTop_toTopOf="@+id/modem_id"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>